# FastKV

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  vcpkg.json
benchmarks/: bench_fastkv.cpp
include/fastkv/: fastkv.hpp
src/: fastkv.cpp  main.cpp
tests/: test_fastkv.cpp
